components/Section/Section.module.css
.section {
  background: url("/images/bg/bg_0.svg");
}

.secondary {
  background: url("/images/bg/bg_1.svg");
}

.info {
  padding: 24px;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: var(--section-bg-color);
}
.secondary .info {
  background: var(--section-bg-alt-color);
}

.wrapper {
  max-width: 1140px;
  margin: 0 auto;
}

.uppertitle {
  text-align: center;
  color: var(--secondary-font-color);
  font-size: 3em;
  font-weight: bold;
  margin: 8px 0;
}

.title {
  text-align: center;
  color: var(--primary-font-color);
  font-size: 2em;
  margin: 8px 0 16px 0;
}

.secondary .uppertitle,
.secondary .title {
  text-align: left;
}

@media (min-width: 768px) {
  .info {
    padding: 40px;
  }

  .uppertitle {
    font-size: 6em;
  }

  .title {
    font-size: 3em;
  }
}

